--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.salesrecoder">
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.salesrecoder"
+    >
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.salesrecoder.SalesInfoActivity"></activity>
-        <activity android:name="com.example.salesrecoder.MainActivity" android:exported="true">
+        <activity
+            android:name=".MostSelling"
+            android:exported="false" />
+        <activity android:name=".SalesInfoActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
